change java cmd line to use concurrent gc (shorter pauses)